Formatting adjustments made to recipe pages. Added Home Page anchor to bottom of each recipe page.

--- a/recipes/PB&J-Recipe.html
+++ b/recipes/PB&J-Recipe.html
@@ -14,13 +14,14 @@
     <p1>This simple yet effective PB&J recipe will leave you craving another after your last bite. </p1>
     <br>
     <br>
-    <br>
     <h2>Ingredients</h2>
     <br>
     <p2>
         <ul>
             <li>Two slices of bread of your choosing.</li>
+            <br>
             <li>Peanut Butter (Your favorite brand)</li>
+            <br>
             <li>Jelly (or jam at your discretion)</li>
         </ul>
     </p2>
@@ -30,12 +31,24 @@
     <p3>
         <ol>
             <li>Remove lid from both the jar of Peanut Butter and the jar of jelly.</li>
+            <br>
             <li>Place your two slices of bread down on a napkin or plate.</li>
+            <br>
             <li>With a knife or other spreading utensil, lather some peanut butter onto one slice of bread. </li>
+            <br>
             <li>After wiping your knife with a napkin or cloth, lather some jelly/jam on the other slice of bread.</li>
+            <br>
             <li>Now, place both pieces of bread together, with the jelly side facing the peanut butter side!</li>
+            <br>
             <li>You may now enjoy your delicious PB&J!</li>
         </ol>
     </p3>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <a href = "../index.html">Back to Home</a>
 </body>
 </html>
