--- a/recipes/pizza-recipe.html
+++ b/recipes/pizza-recipe.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pizza Recipe</title>
 </head>
 <body>
     <h1><b>The <i>Perfect</i> Taco Pizza</b></h1>
     <img src="https://www.allrecipes.com/thmb/0clbsWp9uUTC9szQ3kd54ENyUkU=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/179179-ec2b74aefd0f4a718aedd3d7cd9be974.jpg">
     <br>
     <br>
-    <p1>This pizza recipe will require a sensible pallet and refined taste for a flavorable adventure of Latin-American/Italian culture. <br> 
-    A total of two hours prep time and 20 minutes cook time will be required for maxinium tastiness. </p1>
+    <p1>This Taco Pizza recipe will spice up the home-meal schedule with its flavorful crossover of Latin-American/Italian cuisines. <br> 
+        A total of two hours prep time and twenty minutes cook time will be required to reach optimal tastiness. Enjoy. </p1>
     <br>
     <br>
     <br>
@@ -20,38 +20,74 @@
     <p2>
         <ul>
             <li>10 fluid ounces warm water</li>
+            <br>
             <li>¾ teaspoon salt</li>
+            <br>
             <li>3 tablespoons vegetable oil</li>
+            <br>
             <li>4 cups all-purpose flour</li>
+            <br>
             <li>2 teaspoons active dry yeast</li>
+            <br>
             <li>1 (6 ounce) can tomato paste</li>
+            <br>
             <li>¾ cup water</li>
+            <br>
             <li>1 (1.25 ounce) package taco seasoning mix, divided</li>
+            <br>
             <li>1 teaspoon chili powder, or to taste</li>
+            <br>
             <li>½ teaspoon cayenne pepper, or to taste</li>
+            <br>
             <li>1 (16 ounce) can fat-free refried beans</li>
+            <br>
             <li>⅓ cup salsa</li>
+            <br>
             <li>¼ cup chopped onion</li>
+            <br>
             <li>½ pound ground beef</li>
+            <br>
             <li>4 cups shredded Cheddar cheese</li>
+            <br>
         </ul>
     </p2>
     <h3>Steps to Perfection</h3>
     <p3>
         <ol>
-            <li>Add the water, salt, oil, flour and yeast to your bread machine in the order listed. 
+            <li>
+                Add the water, salt, oil, flour and yeast to your bread machine in the order listed. 
                 Select the dough cycle. Check your dough after it has been mixing a few minutes. If it is too dry and not mixing, 
-                add water 1 tablespoon at a time, until it is mixing and has a nice dough consistency. You want the dough to be pliable but not sticky.</li>
-            <li>Meanwhile, in a small bowl, combine tomato paste, water, and 3/4 of the package of taco seasoning mix. Stir in chili powder and cayenne pepper; set aside. In another bowl, mix refried beans, salsa, and onion; set aside. 
+                add water 1 tablespoon at a time, until it is mixing and has a nice dough consistency. You want the dough to be pliable but not sticky.
+            </li>
+            <br>
+            <li>
+                Meanwhile, in a small bowl, combine tomato paste, water, and 3/4 of the package of taco seasoning mix. Stir in chili powder and cayenne pepper; set aside. In another bowl, mix refried beans, salsa, and onion; set aside. 
                 In a large skillet, cook ground beef until evenly brown; drain excess fat. 
-                Season with the remaining 1/4 package of taco seasoning and a small amount of water. Simmer a few minutes, then remove from heat.</li>
-            <li>Preheat oven to 400 degrees F (200 degrees C)</li>
-            <li>When the dough cycle is finished, remove the dough from the machine. 
+                Season with the remaining 1/4 package of taco seasoning and a small amount of water. Simmer a few minutes, then remove from heat.
+            </li>
+            <br>
+            <li>
+                Preheat oven to 400 degrees F (200 degrees C)
+            </li>
+            <br>
+            <li>
+                When the dough cycle is finished, remove the dough from the machine. 
                 Divide the dough in half, and pat into two 12 inch pans. 
                 Spread a layer of the bean mixture on, then a layer of the tomato mixture. 
-                Sprinkle with seasoned beef and top with cheddar cheese.</li>
-            <li>Bake in preheated oven for 10 to 15 minutes, or until crust is golden brown and cheese is melted. Turn pizzas halfway through baking.</li>
+                Sprinkle with seasoned beef and top with cheddar cheese.
+            </li>
+            <br>
+            <li>
+                Bake in preheated oven for 10 to 15 minutes, or until crust is golden brown and cheese is melted. Turn pizzas halfway through baking.
+            </li>
+            <br>
         </ol>
     </p3>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <a href = "../index.html">Back to Home</a>
 </body>
 </html>
