--- a/recipes/lasagna-recipe.html
+++ b/recipes/lasagna-recipe.html
@@ -10,46 +10,88 @@
     <h1><b> The <i>Perfect</i> Lasagna</b></h1>
     <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.XrVOFJNCidKEIQ5Dk8QHygHaE5%26pid%3DApi&f=1&ipt=c0ef80e4885b61c06d9022f296148966a4d262b26b4b58caecbc927d485a9ad9&ipo=images">
     <br>
-    <br>
-    <p1>This lasagna recipe will require a sensible pallet and refined taste for a flavorable adventure of Italian culture. <br> 
-    A total of two hours prep time and 20 minutes cook time will be required for maxinium tastiness. </p1>
-    <br>
+    <p1>
+        Here is a recipe for lasgana which is a staple of Italian cuisine. Prep/Cook time may take up to two hours (much longer if preparing noodles from scratch).
+    </p1>
     <br>
     <br>
     <h2>Ingredients</h2>
     <p2>
         <ul>
             <li>9 lasagna noodles</li>
+            <br>
             <li>1/4 pounds bulk Italian sausage</li>
+            <br>
             <li>3/4 pound ground beef</li>
+            <br>
             <li>1 medium onion, diced</li>
+            <br>
             <li>3 garlic cloves, minced</li>
+            <br>
             <li>2/3 cup water</li>
+            <br>
             <li>2 cans (one 28 ounces, one 15 ounces) crushed tomatoes</li>
+            <br>
             <li>2 cans (6 ounces each) tomato paste</li>
+            <br>
             <li>2 to 3 tablespoons sugar</li>
+            <br>
             <li>3 tablespoons plus 1/4 cup minced fresh parsley, divided</li>
+            <br>
             <li>2 teaspoons dried basil</li>
+            <br>
             <li>3/4 teaspoon fennel seed</li>
+            <br>
             <li>3/4 teaspoon salt, divided</li>
+            <br>
             <li>1/4 teaspoon coarsely ground pepper</li>
+            <br>
             <li>1 large egg, lightly beaten</li>
+            <br>
             <li>1 carton (15 ounces) ricotta cheese</li>
+            <br>
             <li>4 cups shredded part-skim mozzarella cheese</li>
+            <br>
             <li>3/4 cup grated Parmesan cheese</li>
         </ul>
     </p2>
     <h3>Steps to Perfection</h3>
     <p3>
         <ol>
-            <li>Cook noodles according to package directions; drain. Meanwhile, in a Dutch oven, cook sausage, beef and onion over medium heat 8-10 minutes or until meat is no longer pink, breaking up meat into crumbles. Add garlic; cook 1 minute. Drain.</li>
-            <li>Stir in tomatoes, tomato paste, water, sugar, 3 tablespoons parsley, basil, fennel, 1/2 teaspoon salt and pepper; bring to a boil. Reduce heat; simmer, uncovered, 30 minutes, stirring occasionally.</li>
-            <li>In a small bowl, mix egg, ricotta cheese and remaining 1/4 cup parsley and 1/4 teaspoon salt.
-                Preheat oven to 375°. Spread 2 cups meat sauce into an ungreased 13x9-in. baking dish. </li>
-            <li>Layer with 3 noodles and a third of the ricotta mixture. Sprinkle with 1 cup mozzarella cheese and 2 tablespoons Parmesan cheese. Repeat layers twice. Top with remaining meat sauce and cheeses (dish will be full).</li>
-            <li>Bake, covered, 25 minutes. Bake, uncovered, 25 minutes longer or until bubbly. Let stand 15 minutes before serving.</li>
+            <li>
+                Cook noodles according to package directions; drain. 
+                Meanwhile, in a Dutch oven, cook sausage, beef and onion over medium heat 8-10 minutes or until meat is no longer pink, breaking up meat into crumbles. 
+                Add garlic; cook 1 minute. Drain.
+
+            </li>
+            <br>
+            <li>
+                Stir in tomatoes, tomato paste, water, sugar, 3 tablespoons parsley, basil, fennel, 1/2 teaspoon salt and pepper; bring to a boil. 
+                Reduce heat; simmer, uncovered, 30 minutes, stirring occasionally.
+            </li>
+            <br>
+            <li>
+                In a small bowl, mix egg, ricotta cheese and remaining 1/4 cup parsley and 1/4 teaspoon salt.
+                Preheat oven to 375°. Spread 2 cups meat sauce into an ungreased 13x9-in. baking dish. 
+            </li>
+            <br>
+            <li>
+                Layer with 3 noodles and a third of the ricotta mixture. Sprinkle with 1 cup mozzarella cheese and 2 tablespoons Parmesan cheese. 
+                Repeat layers twice. Top with remaining meat sauce and cheeses (dish will be full).
+            </li>
+            <br>
+            <li>
+                Bake, covered, 25 minutes. Bake, uncovered, 25 minutes longer or until bubbly. Let stand 15 minutes before serving.
+            </li>
         </ol>
     </p3>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <a href = "../index.html">Back to Home</a>
 </body>
 </html>
 <!--
