Added CSS to home and recipe pages.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="main.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,11 +10,13 @@
 <body>
     <h1> Odin Recipes </h1>
     <br>
+    <div>
     <ul>
         <li><a href="recipes/pizza-recipe.html">Fire Pizza Recipe</a></li>
         <li><a href="recipes/lasagna-recipe.html">Dank Lasagna Recipe</a></li>
         <li><a href="recipes/PB&J-recipe.html">Cash Money PB&J Recipe</a></li>
     </ul>
+    </div>
     <br>
     <br>
 
