--- a/recipes/PB&J-Recipe.html
+++ b/recipes/PB&J-Recipe.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="pb&j.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,6 +18,7 @@
     <h2>Ingredients</h2>
     <br>
     <p2>
+        <div>
         <ul>
             <li>Two slices of bread of your choosing.</li>
             <br>
@@ -24,6 +26,7 @@
             <br>
             <li>Jelly (or jam at your discretion)</li>
         </ul>
+    </div>
     </p2>
     <br>
     <h3>Steps to Perfection</h3>
