--- a/recipes/lasagna-recipe.html
+++ b/recipes/lasagna-recipe.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lasagna Recipe</title>
+    <link rel="stylesheet" href="lasagna.css">
 </head>
 <body>
     <h1><b> The <i>Perfect</i> Lasagna</b></h1>
@@ -17,6 +18,7 @@
     <br>
     <h2>Ingredients</h2>
     <p2>
+        <div>
         <ul>
             <li>9 lasagna noodles</li>
             <br>
@@ -54,6 +56,7 @@
             <br>
             <li>3/4 cup grated Parmesan cheese</li>
         </ul>
+        </div>
     </p2>
     <h3>Steps to Perfection</h3>
     <p3>
