--- a/recipes/pizza-recipe.html
+++ b/recipes/pizza-recipe.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="pizza.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,6 +19,7 @@
     <br>
     <h2>Ingredients</h2>
     <p2>
+        <div>
         <ul>
             <li>10 fluid ounces warm water</li>
             <br>
@@ -50,6 +52,7 @@
             <li>4 cups shredded Cheddar cheese</li>
             <br>
         </ul>
+    </div>
     </p2>
     <h3>Steps to Perfection</h3>
     <p3>
